[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
base62 = "2.2"
moka = { version = "0.12", features = ["future"] }
redis = { version = "1.0", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
tokio = { version = "1.49", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
tracing-test = "0.2"
uuid = { version = "1.21", features = ["v4"] }
